--- a/home.html
+++ b/home.html
@@ -28,7 +28,8 @@
       </div>
 
       <div class="first-row" style="display: flex;">
-        <div class="statistieken" style='background:#ebe7e7; width: 30vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+        <div class="statistieken"
+          style='background:#ebe7e7; width: 30vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Statistieken</h3>
           <hr>
@@ -39,16 +40,41 @@
           <p style='padding: 1vw;' id='total'><i class="fas fa-coins"></i></p>
         </div>
 
-        <div class="statistieken" style='background:#ebe7e7; width: 100%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+        <div class="statistieken"
+          style='background:#ebe7e7; width: 100%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Recente bestellingen</h3>
           <hr>
         </div>
       </div>
 
+      <div class="second-row" style="display: flex;">
+        <div class="statistieken"
+          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          <br>
+          <h3 style='text-align: center;'>Grafiek 1</h3>
+          <hr>
+        </div>
+
+        <div class="statistieken"
+          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          <br>
+          <h3 style='text-align: center;'>Grafiek 2</h3>
+          <hr>
+        </div>
+
+        <div class="statistieken"
+          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          <br>
+          <h3 style='text-align: center;'>Grafiek 3</h3>
+          <hr>
+        </div>
+
+      </div>
 
     </div>
   </div>
+
 
 
 
