--- a/home.html
+++ b/home.html
@@ -33,11 +33,11 @@
           <br>
           <h3 style='text-align: center;'>Inkomsten</h3>
           <hr>
-          <p style='padding: 1vw;' id='week'><i class="fas fa-coins"></i></p>
-          <p style='padding: 1vw;' id='30days'><i class="fas fa-coins"></i></p>
-          <p style='padding: 1vw;' id='90days'><i class="fas fa-coins"></i></p>
-          <p style='padding: 1vw;' id='year'><i class="fas fa-coins"></i></p>
-          <p style='padding: 1vw;' id='total'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='inkomstenweek'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='inkomsten30days'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='inkomsten90days'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='inkomstenyear'><i class="fas fa-coins"></i></p>
+          <p style='padding: 1vw;' id='inkomstentotal'><i class="fas fa-coins"></i></p>
           <hr>
           <canvas id='graph1'></canvas>
         </div>
@@ -47,11 +47,11 @@
           <br>
           <h3 style='text-align: center;'>Bestellingen</h3>
           <hr>
-          <p style='padding: 1vw;' id='week'><i class="fas fa-box"></i></i></p>
-          <p style='padding: 1vw;' id='30days'><i class="fas fa-box"></i></i></p>
-          <p style='padding: 1vw;' id='90days'><i class="fas fa-box"></i></i></p>
-          <p style='padding: 1vw;' id='year'><i class="fas fa-box"></i></i></p>
-          <p style='padding: 1vw;' id='total'><i class="fas fa-box"></i></i></p>
+          <p style='padding: 1vw;' id='ordersweek'><i class="fas fa-box"></i></i></p>
+          <p style='padding: 1vw;' id='orders30days'><i class="fas fa-box"></i></i></p>
+          <p style='padding: 1vw;' id='orders90days'><i class="fas fa-box"></i></i></p>
+          <p style='padding: 1vw;' id='ordersyear'><i class="fas fa-box"></i></i></p>
+          <p style='padding: 1vw;' id='orderstotal'><i class="fas fa-box"></i></i></p>
           <hr>
           <canvas id='graph2'></canvas>
         </div>
@@ -61,11 +61,11 @@
           <br>
           <h3 style='text-align: center;'>Bezoekers</h3>
           <hr>
-          <p style='padding: 1vw;' id='week'><i class="fas fa-users"></i></i></p>
-          <p style='padding: 1vw;' id='30days'><i class="fas fa-users"></i></i></p>
-          <p style='padding: 1vw;' id='90days'><i class="fas fa-users"></i></i></p>
-          <p style='padding: 1vw;' id='year'><i class="fas fa-users"></i></i></p>
-          <p style='padding: 1vw;' id='total'><i class="fas fa-users"></i></i></p>
+          <p style='padding: 1vw;' id='visitorsweek'><i class="fas fa-users"></i></i></p>
+          <p style='padding: 1vw;' id='visitors30days'><i class="fas fa-users"></i></i></p>
+          <p style='padding: 1vw;' id='visitors90days'><i class="fas fa-users"></i></i></p>
+          <p style='padding: 1vw;' id='visitorsyear'><i class="fas fa-users"></i></i></p>
+          <p style='padding: 1vw;' id='visitorstotal'><i class="fas fa-users"></i></i></p>
           <hr>
           <canvas id='graph3'></canvas>
         </div>
