--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
       <div class="first-row" style="display: flex;">
         <div class="inkomsten"
-          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Inkomsten</h3>
           <hr>
@@ -40,10 +40,17 @@
           <p style='padding: 1vw;' id='inkomstentotal'><i class="fas fa-coins"></i></p>
           <hr>
           <canvas id='graph1'></canvas>
+          <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
+            <button id="week">7 Dagen</button>
+            <button id="30days">30 Dagen</button>
+            <button id="90days">90 Dagen</button>
+            <button id="year">Jaar</button>
+            <button id="alltime">Altijd</button>
+          </div>
         </div>
 
         <div class="statistieken"
-          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Bestellingen</h3>
           <hr>
@@ -57,7 +64,7 @@
         </div>
 
         <div class="inkomsten"
-          style='background:#ebe7e7; width: 33vw; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Bezoekers</h3>
           <hr>
@@ -69,7 +76,7 @@
           <hr>
           <canvas id='graph3'></canvas>
         </div>
-
+        
       </div>
     </div>
   </div>
