--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         Uitloggen</a>
     </div>
 
-    <div class="main_content">
+    <div class="main_content" style="background: #f0f0f0;"> 
       <div class="welkom" style="background: #9fda34;">
         <br>
         <h1 id='welkom' style="text-align: center; color: white;"></h1>
@@ -29,7 +29,7 @@
 
       <div class="first-row" style="display: flex;">
         <div class="inkomsten"
-          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Inkomsten</h3>
           <hr>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="statistieken"
-          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Bestellingen</h3>
           <hr>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="inkomsten"
-          style='background:#ebe7e7; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
           <br>
           <h3 style='text-align: center;'>Bezoekers</h3>
           <hr>
