--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/all.css">
 </head>
 
-<body>
+<body style="background: #f0f0f0;">
 
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
@@ -20,7 +20,7 @@
         Uitloggen</a>
     </div>
 
-    <div class="main_content" style="background: #f0f0f0;"> 
+    <div class="main_content" > 
       <div class="welkom" style="background: #9fda34;">
         <br>
         <h1 id='welkom' style="text-align: center; color: white;"></h1>
