--- a/home.html
+++ b/home.html
@@ -41,11 +41,11 @@
           <hr>
           <canvas id='graph1'></canvas>
           <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
-            <button id="week">7 Dagen</button>
-            <button id="30days">30 Dagen</button>
-            <button id="90days">90 Dagen</button>
-            <button id="year">Jaar</button>
-            <button id="alltime">Altijd</button>
+            <button id="inkomstenweekbtn">7 Dagen</button>
+            <button id="inkomsten30daysbtn">30 Dagen</button>
+            <button id="inkomsten90daysbtn">90 Dagen</button>
+            <button id="inkomstenyearbtn">Jaar</button>
+            <button id="inkomstenalltimebtn">Altijd</button>
           </div>
         </div>
 
