--- a/home.html
+++ b/home.html
@@ -61,6 +61,13 @@
           <p style='padding: 1vw;' id='orderstotal'><i class="fas fa-box"></i></i></p>
           <hr>
           <canvas id='graph2'></canvas>
+          <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
+            <button id="ordersweekbtn">7 Dagen</button>
+            <button id="orders30daysbtn">30 Dagen</button>
+            <button id="orders90daysbtn">90 Dagen</button>
+            <button id="ordersyearbtn">Jaar</button>
+            <button id="ordersalltimebtn">Altijd</button>
+          </div>
         </div>
 
         <div class="inkomsten"
