--- a/home.html
+++ b/home.html
@@ -82,6 +82,13 @@
           <p style='padding: 1vw;' id='visitorstotal'><i class="fas fa-users"></i></i></p>
           <hr>
           <canvas id='graph3'></canvas>
+          <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
+            <button id="visitorsweekbtn">7 Dagen</button>
+            <button id="visitors30daysbtn">30 Dagen</button>
+            <button id="visitors90daysbtn">90 Dagen</button>
+            <button id="visitorsyearbtn">Jaar</button>
+            <button id="visitorsalltimebtn">Altijd</button>
+          </div>
         </div>
         
       </div>
