--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <html>
  <head>
-  <link rel="stylesheet" type="text/css" href="css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/all.css">
  </head>
- <body>
+ <body style='
+  background: #76b852;
+  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+  background: -moz-linear-gradient(right, #76b852, #8DC26F);
+  background: -o-linear-gradient(right, #76b852, #8DC26F);
+  background: linear-gradient(to left, #76b852, #8DC26F);
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;      '>
  <div class="login-page">
   <div class="form">
     <form class="login-form">
-      <img src="img/logo.png">
+      <img src="img/logo.png" style='  margin-top: 2vw;
+      width: 20%;
+      height: auto;'>
       <input class="username" type="username" id="username" placeholder="Gebruikersnaam"/>
       <input class="password" type="password" id="password" placeholder="Wachtwoord"/>
     </form>
