--- a/keys.html
+++ b/keys.html
@@ -1,10 +1,18 @@
 <html>
  <head>
-  <link rel="stylesheet" type="text/css" href="css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/all.css">
  </head>
- <body>
+ <body style='
+ background: #76b852;
+ background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+ background: -moz-linear-gradient(right, #76b852, #8DC26F);
+ background: -o-linear-gradient(right, #76b852, #8DC26F);
+ background: linear-gradient(to left, #76b852, #8DC26F);
+ font-family: "Roboto", sans-serif;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;      '>
  <div class="login-page">
   <div class="form">
     <form class="login-form">
@@ -13,6 +21,7 @@
       <input class="namecreate" type="name" id='naamInput' placeholder="Naam"/>
       <input class="usernamecreate" type="username" id='usernameInput' placeholder="Gebruikersnaam"/>
       <input class="passwordcreate" type="password" id='passwordInput' placeholder="Wachtwoord"/>
+      <input class="passwordcreaterepeat" type="password" id='passwordInputRepeat' placeholder="Wachtwoord herhalen"/>
       <br>
       <h3>API Keys</h3>
       <input class="myparcelkey"  type="myparcelkey" id='mpKeyInput' placeholder="MyParcel API Key"/>
