--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         Uitloggen</a>
     </div>
 
-    <div class="main_content" > 
+    <div class="main_content">
       <div class="welkom" style="background: #9fda34;">
         <br>
         <h1 id='welkom' style="text-align: center; color: white;"></h1>
@@ -90,7 +90,7 @@
             <button id="visitorsalltimebtn">Altijd</button>
           </div>
         </div>
-        
+
       </div>
     </div>
   </div>
@@ -103,7 +103,8 @@
       <h2>Uitloggen</h2>
       <p><b>Weet u zeker dat u wilt uitloggen?</b></p>
       <div style="display: flex;">
-        <button class="ja" onclick='window.location.href="./index.html";localStorage.clear();'style="background: green; width: 50%; margin: 2%;">Ja</button>
+        <button class="ja" onclick='window.location.href="./index.html";localStorage.clear();'
+          style="background: green; width: 50%; margin: 2%;">Ja</button>
         <button class="nee" onclick="document.getElementById('popuplogout').classList.remove('visible')"
           style="background: red; width: 50%; margin: 2%;">Nee</button>
       </div>
