--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/all.css">
 </head>
 
-<body style="background: #f0f0f0;">
+<body>
 
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
@@ -29,7 +29,7 @@
 
       <div class="first-row" style="display: flex;">
         <div class="inkomsten"
-          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);'>
           <br>
           <h3 style='text-align: center;'>Inkomsten</h3>
           <hr>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="statistieken"
-          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);'>
           <br>
           <h3 style='text-align: center;'>Bestellingen</h3>
           <hr>
@@ -71,7 +71,7 @@
         </div>
 
         <div class="inkomsten"
-          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;'>
+          style='background:white; width: 33%; height:auto; margin: 2vw; border-radius: 5px; color: black;   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);'>
           <br>
           <h3 style='text-align: center;'>Bezoekers</h3>
           <hr>
