--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
           <canvas id='graph1'></canvas>
           <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
             <button id="inkomstenweekbtn">7 Dagen</button>
-            <button id="inkomsten30daysbtn">30 Dagen</button>
-            <button id="inkomsten90daysbtn">90 Dagen</button>
+            <button id="inkomsten30daysbtn">5 Weken</button>
+            <button id="inkomsten90daysbtn">10 Weken</button>
             <button id="inkomstenyearbtn">Jaar</button>
             <button id="inkomstenalltimebtn">Altijd</button>
           </div>
