--- a/home.html
+++ b/home.html
@@ -61,8 +61,8 @@
           <canvas id='graph2'></canvas>
           <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
             <button id="ordersweekbtn">7 Dagen</button>
-            <button id="orders30daysbtn">30 Dagen</button>
-            <button id="orders90daysbtn">90 Dagen</button>
+            <button id="orders30daysbtn">5 Weken</button>
+            <button id="orders90daysbtn">10 Weken</button>
             <button id="ordersyearbtn">Jaar</button>
             <button id="ordersalltimebtn">Altijd</button>
           </div>
@@ -82,8 +82,8 @@
           <canvas id='graph3'></canvas>
           <div class='knopjes' style='display: flex; width: 100%; height: auto;'>
             <button id="visitorsweekbtn">7 Dagen</button>
-            <button id="visitors30daysbtn">30 Dagen</button>
-            <button id="visitors90daysbtn">90 Dagen</button>
+            <button id="visitors30daysbtn">5 Weken</button>
+            <button id="visitors90daysbtn">10 Weken</button>
             <button id="visitorsyearbtn">Jaar</button>
             <button id="visitorsalltimebtn">Altijd</button>
           </div>
