--- a/orders.html
+++ b/orders.html
@@ -44,6 +44,30 @@
                 <li class='filterOption'><a onclick='filter("Type", 4, this)'>Digitale postzegel</a></li>
               </ul>
             </div>
+
+            <div class='filter' id='lsStatusFilter'>
+              <li class='filterTitle'>Lightspeed Status</li>
+              <ul class='filterList'>
+                <li class='filterOption'><a onclick='filter("lsStatus", "lsStatus", this)'>-</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "new", this)'>Nieuw</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "on_hold", this)'>In de wacht</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "processing", this)'>Verwerken</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_payment", this)'>Wachten op betaling</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_shipment", this)'>Klaar voor verzending</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_pickup", this)'>Klaar voor ophalen</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "completed", this)'>Afgerond</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "completed_shipped", this)'>Verzonden</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "completed_picked_up", this)'>Opgehaald</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "cancelled", this)'>Gecanceld</a></li>
+              </ul>
+            </div>
+
+            <div class='filter' id='lsCustomStatusFilter'>
+              <li class='filterTitle'>Eigen Status</li>
+              <ul class='filterList'>
+                <li class='filterOption'><a onclick='filter("lsCustomStatus", "lsCustomStatus", this)'>-</a></li>
+              </ul>
+            </div>
             <input type='text' onkeyup="search()" id="searchBox" placeholder="Zoek een zending...">
           </div>
 
