--- a/orders.html
+++ b/orders.html
@@ -52,15 +52,14 @@
               <ul class='filterList'>
                 <li class='filterOption'><a onclick='filter("lsStatus", "lsStatus", this)'>-</a></li>
                 <li class='filterOption'><a onclick='filter("lsStatus", "new", this)'>Nieuw</a></li>
-                <li class='filterOption'><a onclick='filter("lsStatus", "on_hold", this)'>In de wacht</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "on_hold", this)'>Wachten op vastlegging</a></li>
                 <li class='filterOption'><a onclick='filter("lsStatus", "processing", this)'>Verwerken</a></li>
                 <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_payment", this)'>Wachten op betaling</a></li>
                 <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_shipment", this)'>Klaar voor verzending</a></li>
-                <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_pickup", this)'>Klaar voor ophalen</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_pickup", this)'>Klaar voor afhalen</a></li>
                 <li class='filterOption'><a onclick='filter("lsStatus", "completed", this)'>Afgerond</a></li>
-                <li class='filterOption'><a onclick='filter("lsStatus", "completed_shipped", this)'>Verzonden</a></li>
-                <li class='filterOption'><a onclick='filter("lsStatus", "completed_picked_up", this)'>Opgehaald</a></li>
-                <li class='filterOption'><a onclick='filter("lsStatus", "cancelled", this)'>Gecanceld</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "completed_picked_up", this)'>Afgerond</a></li>
+                <li class='filterOption'><a onclick='filter("lsStatus", "cancelled", this)'>Geannuleerd</a></li>
               </ul>
             </div>
 
