--- a/settings.html
+++ b/settings.html
@@ -25,6 +25,8 @@
         <hr>
       </div>
 
+      <h1 style='text-align: center;'>Account</h1>
+
       <div style='display: flex;'>
 
         <div class="form" style='margin: 1vw;'>
@@ -84,6 +86,12 @@
           <button onclick='changelskey()'>Wijzigen</button>
         </div>
       </div>
+
+
+      <h1 style='text-align: center;'>Statussen</h1>
+
+      <div class='form' id='customStatusSettings' style='margin-left: auto;margin-right: auto; width: 60%'>
+      </div>
     </div>
   </div>
 
@@ -124,9 +132,26 @@
     </div>
   </div>
 
+  <div id="customStatusPopup"class="overlay">
+    <div class="popup" style='height: 700px'>
+      <h2>Status aanpassen</h2>
+      <form>
+        <label for = '.title'>Naam: </label>
+        <input type="text" class='title' placeholder="Naam van status">
+      </form>
+      <label for='.colorPicker'>Kleur: </label>
+      <div class='colorPicker'>
+      </div>
+      <br>
+      <button class='save'>Opslaan</button>
+      <a class="close" onclick='document.getElementById("customStatusPopup").classList.remove("visible")'>&times;</a>
+    </div>
+  </div>
+
   <script type="text/javascript" scr="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" scr="js/bootstrap.min.js"></script>
   <script type="text/javascript" src='js/account.js'></script>
+  <script type='text/javascript' src='js/settings.js'></script>
   <script type="text/javascript" src="js/menu.js"></script>
 
 </body>
