Checken of titel lang genoeg is

--- a/settings.html
+++ b/settings.html
@@ -135,6 +135,7 @@
   <div id="customStatusPopup"class="overlay">
     <div class="popup" style='height: 700px'>
       <h2>Status aanpassen</h2>
+      <p class='errormsg' style='color: red; visibility: hidden;'><i>De naam moet minstend 1 teken lang zijn!</i></p>
       <form>
         <label for = '.title'>Naam: </label>
         <input type="text" class='title' placeholder="Naam van status">
