--- a/orders.html
+++ b/orders.html
@@ -62,6 +62,7 @@
             <li class='filterOption'><a onclick='filter("lsStatus", "processing_awaiting_pickup", this)'>Klaar voor
                 afhalen</a></li>
             <li class='filterOption'><a onclick='filter("lsStatus", "completed", this)'>Afgerond</a></li>
+            <li class='filterOption'><a onclick='filter("lsStatus", "completed_shipped", this)'>Afgerond</a></li>
             <li class='filterOption'><a onclick='filter("lsStatus", "completed_picked_up", this)'>Afgerond</a></li>
             <li class='filterOption'><a onclick='filter("lsStatus", "cancelled", this)'>Geannuleerd</a></li>
           </ul>
