--- a/orders.html
+++ b/orders.html
@@ -76,7 +76,7 @@
         </div>
 
         <div id='fileSelection' class='fileSelection'>
-          <li class='fileSelectionTitle'>Selecteer backup</li>
+          <li class='fileSelectionTitle'>Backups</li>
           <ul class='fileSelectionList'>
           </ul>
         </div>
