fix voor zoeken

--- a/orders.html
+++ b/orders.html
@@ -80,7 +80,7 @@
           <ul class='fileSelectionList'>
           </ul>
         </div>
-        <input type='text' onkeyup="search()" id="searchBox" placeholder="Zoek een zending...">
+        <input type='text' onkeyup="filter()" id="searchBox" placeholder="Zoek een zending...">
       </div>
 
 
